[tool.poetry]
name = "clusterfy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.21.0"
tekore = "4.5.0"
python-dotenv = "1.0.0"
pandas = "1.5.3"
plotly = "5.14.1"
matplotlib = "3.7.1"
scikit-learn = "1.2.2"
umap-learn = "0.5.3"
seaborn = "0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
